# remotemo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Doxyfile.in  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml  super-linter.yml
Tools/: check-src-with-clang-tidy  check-with-clang-tidy  diff-clang-format  run_tests
cmake/: Doxygen.cmake  No_in_source_builds.cmake
docs/: API_design.md  compiling.md
docs/diagrams/: remoTemo.dia
include/remotemo/: common_types.hpp  config.hpp  exceptions.hpp  remotemo.hpp
res/img/: README.md
samples/: hello_sample.cpp  wrap_n_scroll_test.cpp
src/: background.cpp  background.hpp  config.cpp  engine.cpp  engine.hpp  exceptions.cpp  font.cpp  font.hpp  hello_sample.cpp  keyboard.cpp  keyboard.hpp  remotemo.cpp  renderer.cpp  renderer.hpp  res_handler.hpp  text_display.cpp  text_display.hpp  texture.cpp  texture.hpp  version.hpp.in  window.cpp  window.hpp
src/docs/: Doxyfile.in
tests/: .clang-tidy  CMakeLists.txt  CPPLINT.cfg
tests/src/: dummy_mock.cpp  dummy_test.cpp  init.cpp  init.hpp  init_helpers.cpp  init_no_conf_res.cpp  init_setup.cpp  init_validate_conf_res.cpp  init_validate_res.cpp  mock_sdl.hpp  mock_sdl_all.hpp  remotemo_init.cpp  test_init.hpp  test_init_helpers.cpp  test_init_setup.cpp  test_init_validate_conf_res.cpp  test_io.cpp
